<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        app:cardElevation="@dimen/cardElevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageBasketItemIV"
                android:layout_gravity="center"
                android:layout_width="@dimen/image_layout_radius"
                android:layout_height="@dimen/image_layout_radius"
                android:layout_margin="@dimen/margin_image_layout"
                android:src="@drawable/item_image"></de.hdodenhof.circleimageview.CircleImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:orientation="vertical"
                android:padding="@dimen/margin">

                <TextView
                    android:id="@+id/nameBasketTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nameShopTV_Hint"
                    android:padding="@dimen/margin"
                    android:textColor="@color/Blue"
                    android:textColorHint="@color/Grey"
                    android:textSize="@dimen/name_shop_TextSize"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/priceBasketTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/priceShopTV_Hint"
                    android:padding="@dimen/margin"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textColorHint="@color/Grey"
                    android:textSize="@dimen/price_basket_TextSize"></TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin">

                    <TextView
                        android:id="@+id/countBasketTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/countBasketTV_Hint"
                        android:textColor="@color/black"
                        android:textColorHint="@color/Grey"
                        android:textSize="@dimen/count_basket_TextSize"></TextView>

                    <TextView
                        android:id="@+id/totalPriceTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/totalPriceTV_Hint"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textColorHint="@color/Grey"
                        android:textSize="@dimen/totalPrice_basket_TextSize"
                        android:textStyle="bold"></TextView>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>