<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/cardCornerRadius"
    app:cardElevation="@dimen/cardElevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageAlterDialogIV"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/image_alterDialog_dimens"
                android:layout_margin="@dimen/margin_image_layout"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/item_image"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.5"></ImageView>

            <TextView
                android:id="@+id/priceAlterDialogTV"
                android:layout_width="@dimen/layout_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="@string/priceAlterDialogTV"
                android:padding="@dimen/margin"
                android:textAlignment="center"
                android:textColor="@color/Blue"
                android:textColorHint="@color/Grey"
                android:textSize="@dimen/priceAlterDialog_TextSize"
                android:textStyle="bold"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.5"></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.widget.Button
                android:id="@+id/minusButtonAlertDialogBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="0.2"
                android:background="@drawable/button_alert_dialog_background"
                android:padding="@dimen/padding"
                android:text="@string/minusButtonAlertDialogBT_Text"
                android:textColor="@color/white"
                android:textSize="@dimen/alertDialog_button_textSize"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageStartIV"></android.widget.Button>

            <TextView
                android:id="@+id/countAlertDialogTV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/countAlertDialogTV_Hint"
                android:padding="@dimen/margin"
                android:textColor="@color/Blue"
                android:textColorHint="@color/Grey"
                android:textSize="@dimen/alertDialog_button_textSize"></TextView>

            <android.widget.Button
                android:id="@+id/plusButtonAlertDialogBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="0.2"
                android:background="@drawable/button_alert_dialog_background"
                android:padding="@dimen/padding"
                android:text="@string/plusButtonAlertDialogBT_Text"
                android:textColor="@color/white"
                android:textSize="@dimen/alertDialog_button_textSize"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageStartIV"></android.widget.Button>
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>